# revelation-online-web

./: .gitignore  README.MD  docker-compose.dev.yaml  docker-compose.prod.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
caddy/: Caddyfile  CaddyfileDev  CaddyfileProd
client/: .cta.json  .dockerignore  Dockerfile.dev  Dockerfile.prod  README.md  index.html  package-lock.json  package.json
client/public/: manifest.json
client/src/: main.tsx  routeTree.gen.ts  styles.css
client/src/components/App/: AppSidebar.tsx  AppSidebarInset.tsx  BreadcrumbNav.tsx  NavSidebarContent.tsx
client/src/components/common/cards/: CardsBody.tsx  (+5 more)
client/src/components/moba/: ListTable.tsx
client/src/components/overlay/: AppSidebar.tsx  AppSidebarInset.tsx  BreadcrumbNav.tsx  NavSidebarContent.tsx
client/src/data/moba/: heroes.ts  items.ts
client/src/hooks/i18n/: useItemTranslation.ts  useMobaHeroTranslation.ts  useMobaItemTranslation.ts  useSkillTranslation.ts
client/src/i18n/: config.ts  en.json  ru.json
client/src/routes/(app)/: 404.tsx  route.tsx
client/src/routes/admin/: route.tsx
client/src/routes/demo/: route.tsx
client/src/store/: languageStore.ts  themeStorage.ts
deployment/: README.MD
server/: Dockerfile.dev  README.md  pyproject.toml
server/src/: main.py
server/src/auth/: api.py  dependencies.py  repository.py  service.py
server/src/database/: postgresql.py
server/src/moba/builds/: api.py  models.py
server/src/moba/builds/consts/: heroes.py  items.py
server/src/utils/: configuration.py  database.py  date.py  request.py
(+28 files in other folders)
