[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Rettera",email = "trof1m00@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.127.0,<0.128.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-decouple (>=3.8,<4.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
]


[tool.poetry]
packages = [{include = "app"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
